[package]
name = "urbanium"
version = "0.1.0"
description = "Urbanium Protocol Anchor Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "urbanium"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
pyth-sdk-solana = "0.10.3"
